--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
     <main style="padding: 0 15px; max-width: 100%;">
         <div id="finance-home">
             <div class="finance-card-main" style="background: rgba(255,255,255,0.05); border: 1px solid #333; padding: 20px; border-radius: 8px;">
-            <div style="text-align: center; margin-bottom: 20px;">
+            <div style="text-align: center;">
                 <div class="label" style="font-size: 9px; color: var(--dim);">TOTAL_LIQUID_ASSETS</div>
                 <div id="total-balance" style="font-size: 2.8rem; font-family: 'Rajdhani'; font-weight: 700; color: #fff;">0.00 €</div>
             </div>
 
-            <div class="survival-box" style="border-top: 1px solid #222; pt: 15px; margin-top: 10px;">
+            <div class="survival-box" style="border-top: 1px solid #222; pt: 15px; padding-top: 10px;">
                 <div id="burn-info-text" style="font-size: 10px; color: #fff; text-align: center; margin-bottom: 8px; font-weight: bold;">
                     ANALISI_FLUSSI...
                 </div>
@@ -267,9 +267,9 @@
                 <div style="color: #fff;"><span class="label" style="color: var(--dim);">DIGITAL:</span> <span id="bank-val">0.00 €</span></div>
                 <div style="color: #fff;"><span class="label" style="color: var(--dim);">PHYSICAL:</span> <span id="cash-val">0.00 €</span></div>
             </div>
+        </div>
             <div id="finance-log" style="margin-top: 20px; padding-bottom: 100px;">
             </div>
-        </div>
         </div>
 
         <div id="log-page" style="display:none; padding-bottom: 100px;">
