--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     </div>
 </div>
     <main style="padding: 0 15px; max-width: 100%;">
-        <div id="finance-home">
+        <div id="finance-home-view">
             <div class="finance-card-main" style="background: rgba(255,255,255,0.05); border: 1px solid #333; padding: 20px; border-radius: 8px;">
             <div style="text-align: center;">
                 <div class="label" style="font-size: 9px; color: var(--dim);">TOTAL_LIQUID_ASSETS</div>
@@ -272,7 +272,7 @@
             </div>
         </div>
 
-        <div id="log-page" style="display:none; padding-bottom: 100px;">
+        <div id="finance-search-view" style="display:none; padding-bottom: 100px;">
         <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px; border-bottom: 1px solid #333; padding-bottom:10px;">
             <h2 style="font-size:1.2rem; color:var(--accent); margin:0;">DATABASE_QUERY</h2>
             <div onclick="switchFinanceTab('home')" style="cursor:pointer; font-size:1rem; color:var(--dim);">[BACK]</div>
