--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>System OS v1.5</title>
   
   <!-- External Scripts & Fonts -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -272,6 +273,26 @@
             </div>
         </div>
 
+        <div id="finance-stats-view" style="display:none; padding-bottom: 100px;">
+            <div style="border-bottom: 1px solid #333; padding-bottom: 10px; margin-bottom: 20px;">
+                <h2 style="font-size: 1.1rem; color: var(--accent);">SYSTEM_DIAGNOSTICS</h2>
+            </div>
+
+            <div class="stats-card" style="background: rgba(10,10,10,0.5); border: 1px solid #222; padding: 15px; border-radius: 8px; margin-bottom: 15px;">
+                <div class="label" style="font-size: 10px; color: var(--dim); margin-bottom: 15px;">EXPENSE_BY_CATEGORY</div>
+                <div style="height: 250px;">
+                    <canvas id="categoryChart"></canvas>
+                </div>
+            </div>
+
+            <div class="stats-card" style="background: rgba(10,10,10,0.5); border: 1px solid #222; padding: 15px; border-radius: 8px; margin-bottom: 15px;">
+                <div class="label" style="font-size: 10px; color: var(--dim); margin-bottom: 15px;">7_DAYS_CASHFLOW_TREND</div>
+                <div style="height: 200px;">
+                    <canvas id="trendChart"></canvas>
+                </div>
+            </div>
+        </div>
+        
         <div id="finance-search-view" style="display:none; padding-bottom: 100px;">
         <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px; border-bottom: 1px solid #333; padding-bottom:10px;">
             <h2 style="font-size:1.2rem; color:var(--accent); margin:0;">DATABASE_QUERY</h2>
@@ -305,7 +326,7 @@
         </div>
     </div>
 
-    <div class="nav-item" id="nav-stats" style="flex:1; text-align: center; color: #222;"> 
+    <div class="nav-item" id="nav-stats" onclick="switchFinanceTab('stats')" style="flex:1; text-align: center; color: #222;"> 
         <i data-lucide="bar-chart-3" style="width: 22px;"></i>
         <div style="font-size: 8px; margin-top: 4px;">STATS</div>
     </div>
