--- a/index.html
+++ b/index.html
@@ -269,33 +269,29 @@
                 <div style="color: #fff;"><span class="label" style="color: var(--dim);">PHYSICAL:</span> <span id="cash-val">0.00 €</span></div>
             </div>
         </div>
-            <div id="finance-log" style="margin-top: 20px; padding-bottom: 100px;">
+            <div id="finance-log" style="margin-top: 20px;">
             </div>
         </div>
 
-        <div id="finance-stats-view" style="display:none; padding-bottom: 100px;">
-            <div style="border-bottom: 1px solid #333; padding-bottom: 10px; margin-bottom: 20px;">
-                <h2 style="font-size: 1.1rem; color: var(--accent);">SYSTEM_DIAGNOSTICS</h2>
-            </div>
-
-            <div class="stats-card" style="background: rgba(10,10,10,0.5); border: 1px solid #222; padding: 15px; border-radius: 8px; margin-bottom: 15px;">
-                <div class="label" style="font-size: 10px; color: var(--dim); margin-bottom: 15px;">EXPENSE_BY_CATEGORY</div>
-                <div style="height: 250px;">
-                    <canvas id="categoryChart"></canvas>
-                    <div id="analyst-stats-comment" style="margin-top: 20px; padding: 15px; border-left: 2px solid var(--accent); background: rgba(0,243,255,0.02); font-size: 0.9rem; font-style: italic; color: #eee;">
-                    <span style="color:var(--accent); font-weight:bold;">AUDIT_CORE:</span> <span id="stats-eval">ANALIZZANDO_FLUSSI...</span>
+        <div id="finance-stats-view" style="display:none; padding: 20px 0 100px 0;">
+            <h2 style="font-size: 1.1rem; color: var(--accent); margin-bottom: 20px;">DIAGNOSTICS_V1.0</h2>
+            
+            <div style="display: grid; gap: 20px;">
+                <div class="stats-card" style="background: #0a0a0a; border: 1px solid #222; padding: 15px; border-radius: 8px;">
+                    <div class="label" style="font-size: 10px; color: var(--dim);">CATEGORY_WEIGHT</div>
+                    <div style="height: 200px; margin-top: 10px;">
+                        <canvas id="categoryChart"></canvas>
                     </div>
                 </div>
-            </div>
 
-            <div class="stats-card" style="background: rgba(10,10,10,0.5); border: 1px solid #222; padding: 15px; border-radius: 8px; margin-bottom: 15px;">
-                <div class="label" style="font-size: 10px; color: var(--dim); margin-bottom: 15px;">7_DAYS_CASHFLOW_TREND</div>
-                <div style="height: 200px;">
-                    <canvas id="trendChart"></canvas>
+                <div id="analyst-stats-comment" style="background: rgba(0,243,255,0.05); border: 1px solid var(--accent); padding: 15px; border-radius: 4px; font-family: 'Rajdhani';">
+                    <div style="font-size: 10px; color: var(--accent);">AUDIT_CORE_REPORT:</div>
+                    <div id="stats-eval" style="font-size: 0.9rem; margin-top: 5px; color: #fff;">INIZIALIZZAZIONE_DATI...</div>
                 </div>
             </div>
         </div>
-        
+
+
         <div id="finance-search-view" style="display:none; padding-bottom: 100px;">
         <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px; border-bottom: 1px solid #333; padding-bottom:10px;">
             <h2 style="font-size:1.2rem; color:var(--accent); margin:0;">DATABASE_QUERY</h2>
