--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             style="width:100%; background:#111; border:1px solid #333; color:#fff; padding:15px; font-family:'Rajdhani'; font-size:1rem; margin-bottom:15px;"
             onkeypress="handleLogSearch(event)">  -->
 
-        <div class="search-wrapper" style="margin-bottom: 20px;">
+        <div id="credits-history-engine" style="margin-bottom: 20px;">
             <div style="position: relative; display: flex; align-items: center; gap: 10px;">
                 <div id="ai-search-toggle" onclick="toggleAISearch()" style="cursor:pointer; padding: 5px; border: 1px solid #444; border-radius: 4px; font-size: 0.7rem; color: var(--dim);">
                     AI: <span id="ai-status" style="color:#666;">OFF</span>
