--- a/index.html
+++ b/index.html
@@ -317,23 +317,22 @@
             </div>
 
             <div class="fin-categories-grid">
-                <button onclick="executeLogSearch('CIBO')" class="cat-btn"><i data-lucide="utensils"></i> CIBO</button>
-                <button onclick="executeLogSearch('CASA')" class="cat-btn"><i data-lucide="home"></i> CASA</button>
-                <button onclick="executeLogSearch('TECH')" class="cat-btn"><i data-lucide="cpu"></i> TECH</button>
-                <button onclick="executeLogSearch('SVAGO')" class="cat-btn"><i data-lucide="gamepad-2"></i> SVAGO</button>
-                <button onclick="executeLogSearch('TRASPORTI')" class="cat-btn"><i data-lucide="car"></i> TRASPORTI</button>
-                <button onclick="executeLogSearch('SALUTE')" class="cat-btn"><i data-lucide="pill"></i> SALUTE</button>
-                <button onclick="executeLogSearch('ENTRATE')" class="cat-btn"><i data-lucide="trending-up"></i> ENTRATE</button>
-                <button onclick="executeLogSearch('ALTRO')" class="cat-btn"><i data-lucide="layers"></i> ALTRO</button>
-                <button onclick="executeLogSearch('SET_BALANCE')" class="cat-btn"><i data-lucide="refresh-cw"></i> RESET</button>
+                <button onclick="quickFilter('CIBO')" class="cat-btn"><i data-lucide="utensils"></i> CIBO</button>
+                <button onclick="quickFilter('CASA')" class="cat-btn"><i data-lucide="home"></i> CASA</button>
+                <button onclick="quickFilter('TECH')" class="cat-btn"><i data-lucide="cpu"></i> TECH</button>
+                <button onclick="quickFilter('SVAGO')" class="cat-btn"><i data-lucide="gamepad-2"></i> SVAGO</button>
+                <button onclick="quickFilter('TRASPORTI')" class="cat-btn"><i data-lucide="car"></i> TRASPORTI</button>
+                <button onclick="quickFilter('SALUTE')" class="cat-btn"><i data-lucide="pill"></i> SALUTE</button>
+                <button onclick="quickFilter('ENTRATE')" class="cat-btn"><i data-lucide="trending-up"></i> ENTRATE</button>
+                <button onclick="quickFilter('ALTRO')" class="cat-btn"><i data-lucide="layers"></i> ALTRO</button>
+                <button onclick="quickFilter('SET_BALANCE')" class="cat-btn"><i data-lucide="refresh-cw"></i> RESET</button>
             </div>
 
-<div class="fin-time-filters">
-    <input type="month" id="month-picker" onchange="filterByMonth(this.value)" style="display:none;">
-    <button onclick="document.getElementById('month-picker').showPicker()" class="cat-btn time-btn">
-        <i data-lucide="calendar"></i> RICERCA MESE / ANNO
-    </button>
-</div>
+            <div class="fin-time-filters">
+                <button onclick="openTimeFilter()" class="cat-btn time-btn">
+                    <i data-lucide="calendar"></i> RICERCA MESE / ANNO
+                </button>
+            </div>
         </div>
                     
         <div id="filtered-results">
