--- a/index.html
+++ b/index.html
@@ -288,12 +288,21 @@
                 </div>
 
                 <div style="display: grid; gap: 20px;">
-                    <div class="stats-card" style="background: #0a0a0a; border: 1px solid #222; padding: 15px; border-radius: 8px;">
-                        <div class="label" style="font-size: 10px; color: var(--dim);">CATEGORY_WEIGHT</div>
-                        <div style="height: 200px; margin-top: 10px;">
-                            <canvas id="categoryChart"></canvas>
+                    <div class="stats-card" style="background: #0a0a0a; border: 1px solid #222; padding: 15px; border-radius: 4px; margin-bottom: 20px;">
+                        <div style="display: flex; justify-content: space-between; font-size: 10px; color: var(--dim);">
+                            <span>MONTHLY_SURVIVAL_INDEX</span>
+                            <span id="survival-percentage">0%</span>
+                        </div>
+                        <div class="survival-bar-container" style="width: 100%; height: 8px; background: #1a1a1a; border-radius: 10px; margin-top: 8px; overflow: hidden; border: 1px solid #333;">
+                            <div id="survival-bar-fill" style="width: 0%; height: 100%; background: var(--accent); box-shadow: 0 0 10px var(--accent); transition: width 0.8s ease;"></div>
                         </div>
                     </div>
+
+                    <div class="stats-card" style="background: #0a0a0a; border: 1px solid #222; padding: 15px; border-radius: 4px; margin-bottom: 20px;">
+                        <div style="font-size: 10px; color: var(--dim); margin-bottom: 10px;">TOP_RESOURCES_DRAIN (CURRENT_MONTH)</div>
+                        <div id="top-expenses-list" style="display: flex; flex-direction: column; gap: 10px;">
+                            </div>
+                    </div>                    </div>
 
                     <div id="analyst-stats-comment" style="background: rgba(0,243,255,0.05); border: 1px solid var(--accent); padding: 15px; border-radius: 4px; font-family: 'Rajdhani';">
                         <div style="font-size: 10px; color: var(--accent);">AUDIT_CORE_REPORT:</div>
